# graphics-programming

./: .gitignore  README.md
Evaluations/1-1/: main.c
Evaluations/1-2/: main.c
Evaluations/1-3/: main.c
Evaluations/1-4/: main.c
Evaluations/2-1/: main.c
Evaluations/2-2/: main.c
Evaluations/3-1/: CMakeLists.txt  Makefile  main.c
Evaluations/3-1/shaders/: projection-gouraud.vsh  projection.vsh
Evaluations/3-2/: CMakeLists.txt  main.c
Evaluations/3-3/: CMakeLists.txt  README.txt  main.c
Exercises/03 HelloShaders/: main.c
Exercises/06 IndexBuffers/: main.c
Exercises/07 RestartingStrips/: main.c
Exercises/08 Transforms/: main.c
Exercises/09 Orthogonal Projection/: main.c
Exercises/10 Perspective Projection/: main.c
Exercises/12 Depth and Transparency/: main.c
Exercises/13 Lighting/: main.c
Exercises/14 Multiple Lighting/: Makefile  main.c
Exercises/15 Textures/: main.c
Exercises/16 Textures 2/: main.c
Exercises/17 Mouse Picking/: Makefile  main.c
Exercises/18 Geometry Shader/: main.c
Exercises/19 Tessellation Shader/: main.c
Exercises/HelloGLEW/: Makefile  main.c
Exercises/HelloGLUT/: .cproject  Makefile
Exercises/HelloShaders/: .cproject  .project  main.c
Exercises/HelloShaders02/: .cproject  .project  main.c
Exercises/UniformVariables/: main.c
HelloGLEW/: .cproject  .project  main.c
HelloGLUT/: .cproject  .project  main.c
HelloShaders/: main.c  utils.c
HelloShaders/Shaders/: orange.fsh
Practices/Practice1_1/: .cproject  .project  Makefile  main.c
Practices/Practice1_2/: .cproject  .project  (+1 more)
Practices/Practice4_1/: CMakeLists.txt  main.c
Practices/Practice4_1/shaders/: color.fsh
Utils/: cylinder.c  cylinder.h  mat4.c  mat4.h  sphere.c  transforms.c  transforms.h  utils.h  vec3.c  vec3.h  vec4.c  vec4.h
(+49 files in other folders)
